# imageoptimize

./: CLAUDE.md  Cargo.toml  Makefile  README.md  README_zh.md  install.sh
.github/workflows/: ci.yml  publish.yml  upload_asset.sh
src/: image_processing.rs  images.rs  lib.rs
