[package]
name = "imageoptimize"
version = "0.2.2"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
categories = ["multimedia::images"]
keywords = ["image", "optimize"]
description = "Optimize image of multi format"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/imageoptimize"
repository = "https://github.com/vicanso/imageoptimize"
exclude = ["assets/*", "test/*", "Cargo.lock"]
readme = "./README.md"
autobins = false


[lib]
name = "imageoptimize"
path = "src/lib.rs"

[[bin]]
name = "imageoptimize"
path = "bin/imageoptimize.rs"
required-features = ["bin"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bin = ["clap", "tokio", "glob", "nu-ansi-term"]

[dependencies]
async-trait = "0.1.88"
avif-decode = "1.0.1"
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"], optional = true }
dssim-core = "3.2.11"
glob = { version = "0.3.2", optional = true }
image = { version = "0.25.6", features = ["webp", "avif"] }
imagequant = { version = "4.4.1", default-features = false }
lodepng = "3.12.1"
mozjpeg = "0.10.13"
nu-ansi-term = { version = "0.50.1", optional = true }
reqwest = "0.12.22"
rgb = "0.8.52"
snafu = "0.8.6"
substring = "1.4.5"
tokio = { version = "1.47.0", features = [
    "rt",
    "fs",
    "macros",
    "rt-multi-thread",
], optional = true }
urlencoding = "2.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"
