[package]
name = "imageoptimize"
version = "0.4.1"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
categories = ["multimedia::images"]
keywords = ["image", "optimize"]
description = "Optimize image of multi format"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/imageoptimize"
repository = "https://github.com/vicanso/imageoptimize"
exclude = ["assets/*", "test/*", "Cargo.lock"]
readme = "./README.md"
autobins = false


[lib]
name = "imageoptimize"
path = "src/lib.rs"

[[bin]]
name = "imageoptimize"
path = "bin/imageoptimize.rs"
required-features = ["bin"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bin = ["clap", "tokio", "glob", "nu-ansi-term", "num_cpus"]

[dependencies]
avif-decode = "1.0.2"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"], optional = true }
dssim-core = "3.4.0"
glob = { version = "0.3.3", optional = true }
image = { version = "0.25.10", features = ["webp", "avif"] }
imagequant = { version = "4.4.1", default-features = false }
lodepng = "3.12.2"
mozjpeg = "0.10.13"
nu-ansi-term = { version = "0.50.3", optional = true }
num_cpus = { version = "1.16.0", optional = true }
reqwest = "0.13.2"
rgb = "0.8.52"
snafu = "0.9.0"
tokio = { version = "1.52.1", features = [
    "rt",
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
], optional = true }
urlencoding = "2.1.3"
webp = "0.3.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
